--- a/client-server/src/main/resources/application.yml
+++ b/client-server/src/main/resources/application.yml
@@ -8,35 +8,28 @@ spring:
     active: dev
   security:
     user:
-      name: clientUser
+      name: client-user
       password: 123456
-  boot:
-    admin:
-      client:
-        url: http://localhost:9000
-        username: admin
-        password: admin123
-        instance:
-          metadata:
-            user.name: clientUser
-            user.password: 123456
-        auto-registration: true
-        auto-deregistration: true
-        period: 10s
-        connect-timeout: 2s
-        read-timeout: 5s
+
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.101.188:8848
+        namespace: public
+        group: DEFAULT_GROUP
+        metadata:
+          user.name: client-user
+          user.password: 123456
 
 management:
   endpoints:
     web:
       exposure:
-        include: health, info, metrics, loggers, env, beans
+        include: '*'
   endpoint:
     health:
       show-details: always
       show-components: always
-    info:
-      access: read_only
   info:
     env:
       enabled: true
