--- a/admin-server/pom.xml
+++ b/admin-server/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>spring-boot-admin-starter-server</artifactId>
             <version>3.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>3.5.5</version>
+        </dependency>
     </dependencies>
 </project>
