添加自身的监控

--- a/admin-server/src/main/resources/application.yml
+++ b/admin-server/src/main/resources/application.yml
@@ -28,3 +28,12 @@ spring:
       password: admin123
 
 
+# 必须暴露 Actuator 端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
