--- a/client-server/src/main/resources/application.yml
+++ b/client-server/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
           user.name: client-user
           user.password: 123456
 
+# 必须暴露 Actuator 端点
 management:
   endpoints:
     web:
@@ -29,12 +30,3 @@ management:
   endpoint:
     health:
       show-details: always
-      show-components: always
-  info:
-    env:
-      enabled: true
-  health:
-    defaults:
-      enabled: true
-    diskspace:
-      enabled: true
