--- a/admin-server/src/main/resources/application.yml
+++ b/admin-server/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
         server-addr: 192.168.101.188:8848
         namespace: public
         group: DEFAULT_GROUP
+        metadata:
+          user.name: admin
+          user.password: admin123
   boot:
     # 监控管理
     admin:
