--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.5.3</version>
                 <executions>
                     <execution>
                         <goals>
